Remove hot-reload state support
Drop the enableHotReloadState API, its CLI option (--no-preserve-state), related
tests, types export, and example usage.

Add BTUIN_DEVTOOLS_CONTROLLER env var and wiring: the CLI pins a controller file
path into the child env, and the runtime resolves/imports a devtools controller
from that spec. Move/adjust hot-reload module imports to src/cli and update
docs.

--- a/src/devtools/inspector.html
+++ b/src/devtools/inspector.html
@@ -185,10 +185,7 @@
         </div>
         <div id="previewPanel">
           <div class="controls">
-            <label
-              >Zoom
-              <input id="zoom" type="range" min="60" max="200" value="100"
-            /></label>
+            <label>Zoom <input id="zoom" type="range" min="60" max="200" value="100" /></label>
             <label><input id="boxes" type="checkbox" checked /> Boxes</label>
             <span id="previewSize" class="pill">(none)</span>
           </div>
